--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ article:
 markdown:           kramdown
 highlighter:        rouge
 
-gems:
+plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-gist
