--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # Site title and description
 title: SOUTIEN
 description: Customer Support Helpdesk Jekyll theme
-lang: en
+lang: fr
 
 # Site subpath, e.g. /blog
 baseurl: ""
