--- a/_data/translation.yml
+++ b/_data/translation.yml
@@ -1,22 +1,42 @@
 # English (default)
 
 en:
-  previous:                   "Previous"
-  next:                       "Next"
-  related_articles:           "Related Articles"
-  related_posts:              "Related Posts"
-  read_more:                  "Read more"
-  by:                         "By"
-  share_twitter:              "Share on Twitter"
-  share_facebook:             "Share on Facebook"
-  search_placeholder:         "Search for answers"
-  search_no_results:          "No results found"
-  mobile_nav_site:            "Menu"
-  contact_name:               "Name"
-  contact_email:              "Email"
-  contact_subject:            "Subject"
-  contact_message:            "Message"
-  contact_send:               "Send"
-  newsletter_email:           "Email Address"
-  newsletter_submit:          "Submit"
-  article_categories:         "Categories"
+  previous: "Previous"
+  next: "Next"
+  related_articles: "Related Articles"
+  related_posts: "Related Posts"
+  read_more: "Read more"
+  by: "By"
+  share_twitter: "Share on Twitter"
+  share_facebook: "Share on Facebook"
+  search_placeholder: "Search for answers"
+  search_no_results: "No results found"
+  mobile_nav_site: "Menu"
+  contact_name: "Name"
+  contact_email: "Email"
+  contact_subject: "Subject"
+  contact_message: "Message"
+  contact_send: "Send"
+  newsletter_email: "Email Address"
+  newsletter_submit: "Submit"
+  article_categories: "Categories"
+fr:
+  previous: "Précédent"
+  next: "Suivant"
+  related_articles: "Articles associés"
+  related_posts: "Post associés"
+  read_more: "plus..."
+  by: "Par"
+  share_twitter: "Share on Twitter"
+  share_facebook: "Share on Facebook"
+  search_placeholder: "Search for answers"
+  search_no_results: "Aucun résultat n'a été trouvé."
+  mobile_nav_site: "Menu"
+  contact_name: "Nom"
+  contact_email: "Email"
+  contact_subject: "Sujet"
+  contact_message: "Message"
+  contact_send: "Envoyer"
+  newsletter_email: "Email Address"
+  newsletter_submit: "S'inscrire"
+  article_categories: "Categories"
