--- a/_data/translation.yml
+++ b/_data/translation.yml
@@ -29,7 +29,7 @@ fr:
   by: "Par"
   share_twitter: "Share on Twitter"
   share_facebook: "Share on Facebook"
-  search_placeholder: "Search for answers"
+  search_placeholder: "Rechercher..."
   search_no_results: "Aucun résultat n'a été trouvé."
   mobile_nav_site: "Menu"
   contact_name: "Nom"
