--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,7 +4,7 @@ backend:
   branch: prepublish
   site_domain: statuesque-granita-8c2c00.netlify.com
 publish_mode: editorial_workflow
-media_folder: 'm/uploads'
+media_folder: 'uploads'
 collections:
   - name: 'articles' # Used in routes, e.g., /admin/collections/blog
     label: 'articles' # Used in the UI
