Added: logo, favicon and fixed translation.

--- a/_data/translation.yml
+++ b/_data/translation.yml
@@ -30,7 +30,7 @@ fr:
   share_twitter: "Share on Twitter"
   share_facebook: "Share on Facebook"
   search_placeholder: "Rechercher..."
-  search_no_results: "Aucun résultat n'a été trouvé."
+  search_no_results: "Aucun résultat n&#39;a été trouvé."
   mobile_nav_site: "Menu"
   contact_name: "Nom"
   contact_email: "Email"
