--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
 # Site title and description
-title: TMP_TITLE
-description: Customer Support Helpdesk Jekyll theme
+title: GUNPLA.help
+description: Tout ce dont vous avez besoin pour customiser votre gunpla.
 lang: fr
 
 # Site subpath, e.g. /blog
@@ -19,7 +19,7 @@ permalink: /:title
 url: https://junthong.github.io
 
 # Site logo # e.g. logo.png, upload logo image file to /uploads/ folder
-logo: favicon.svg
+logo: header-logo.svg
 
 # Default author settings
 author:
