Added: logo, favicon and fixed translation.

--- a/_data/navigation_header.yml
+++ b/_data/navigation_header.yml
@@ -7,7 +7,7 @@ right:
     url: /
 
   - title: Articles
-    url: /articles/installation/
+    url: /articles/grade/
 
   - title: Changelog
     url: /changelog/
