--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ author:
 #    shortname:      # 1234
 
 # Google analytics code, get your code here https://www.google.com/analytics/
-google_analytics:
+google_analytics: G-XETKWWWJYZ
 
 # Number of posts displayed on blog page
 paginate: 6
