Refactor: file name.

--- a/_data/articles.yml
+++ b/_data/articles.yml
@@ -2,8 +2,9 @@
   icon: ic-nipper
   articles:
     - grade
-    - materiel-essentiel
-    - coupe
+    - tool-essential
+    - tool-advanced
+    - cut
     - panel-line
     - lexicon
 
