Added: tool advanced first draft.

--- a/_data/articles.yml
+++ b/_data/articles.yml
@@ -2,8 +2,8 @@
   icon: ic-nipper
   articles:
     - grade
-    - tool-essential
-    - tool-advanced
+    - tools-essential
+    - tools-advanced
     - cut
     - panel-line
     - lexicon
